# paticle-life

./: CODEBUDDY.md  Cargo.toml  README.md
examples/: prototype.rs
src/: lib.rs  main.rs
src/bundles/: mod.rs  particle.rs
src/camera_move/: mod.rs
src/command/: mod.rs
src/components/: collision.rs  mod.rs  particle_marker.rs  particle_type.rs  position.rs  velocity.rs
src/input_focus/: mod.rs
src/particle/: mod.rs
src/resources/: camera_move_config.rs  input_focus.rs  mod.rs  particle_config.rs  particle_interaction_table.rs  particle_update_toggle.rs
src/systems/: mod.rs  move_camera.rs  respawn_particle.rs  setup.rs  sync_transform.rs  toggle_particle_update.rs  update_collision.rs  update_input_focus.rs  update_particle.rs
