[package]
name = "bevy-game-test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
bevy_console = "0.16.0"
clap = "4.5.54"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
